# TrussC

./: .gitignore  README.md
.github/workflows/: build.yml
addons/tcxBox2d/src/: tcxBox2dPolygon.cpp
addons/tcxCurl/: CMakeLists.txt
addons/tcxCurl/src/: tcxCurl.h
addons/tcxLua/: README.md
addons/tcxLua/exampleBasic/src/: tcApp.cpp
addons/tcxLua/exampleEasyCam/src/: tcApp.cpp  tcApp.h
addons/tcxLua/exampleJsonXml/: .gitignore
addons/tcxLua/exampleJsonXml/src/: tcApp.cpp  tcApp.h
addons/tcxLua/exampleMath/src/: tcApp.cpp
addons/tcxLua/examplePath/src/: tcApp.cpp
addons/tcxLua/exampleSimple/src/: tcApp.cpp
addons/tcxLua/exampleTween/src/: tcApp.cpp
addons/tcxLua/exampleTypes/: addons.make
addons/tcxLua/exampleTypes/src/: tcApp.cpp  tcApp.h
addons/tcxLua/src/: tcxLua.cpp  tcxLua.h
addons/tcxLua/tools/bindgen/: main.py
addons/tcxObj/: .gitignore  CMakeLists.txt  LICENSES.md
addons/tcxObj/example-basic/: addons.make
addons/tcxObj/example-basic/src/: main.cpp  tcApp.cpp  tcApp.h
addons/tcxObj/src/: tcxObj.h  tcxObjExporter.cpp  tcxObjExporter.h  tcxObjLoader.cpp  tcxObjLoader.h
addons/tcxOsc/example-osc-event/src/: tcApp.h
addons/tcxOsc/example-osc-polling/src/: tcApp.h
core/: CMakeLists.txt
core/cmake/: trussc_app.cmake
core/include/: TrussC.h  tcBuildInfo.h  tcPlatform.h
core/include/tc/3d/: tcEnvironment.h  tcMeshPbrPipeline.h
core/include/tc/app/: tcGlobal.cpp  tcHotReloadHost.h
core/include/tc/gpu/: tcFbo.h
core/include/tc/graphics/: tcBackend.h
core/platform/android/: tcPlatform_android.cpp
core/platform/ios/: tcPlatform_ios.mm
core/platform/linux/: tcPlatform_linux.cpp
core/platform/mac/: tcPlatform_mac.mm
core/platform/web/: tcPlatform_web.cpp
core/platform/win/: tcPlatform_win.cpp
core/resources/android/: AndroidManifest.xml.in
core/shaders/: iblBake.glsl
docs/: BUILD_SYSTEM.md  GET_STARTED.md  GET_STARTED_CONSOLE_MODE.md  REFERENCE.md  ROADMAP.md  TrussC_vs_openFrameworks.md  api-definition.yaml
docs/scripts/: generate-docs.js  of-category-mapping.js
examples/3d/pbrSpheresExample/src/: tcApp.cpp
examples/graphics/fullscreenShaderExample/src/shaders/: effects.glsl  effects.glsl.h
examples/graphics/strokeMeshExample/src/: tcApp.cpp
examples/utils/platformInfoExample/: CMakeLists.txt
examples/utils/platformInfoExample/src/: main.cpp  tcApp.cpp
examples/utils/utilsExample/src/: tcApp.cpp
examples/windowing/windowPositionExample/src/: main.cpp  tcApp.cpp
projectGenerator/: buildProjectGenerator_win.bat
projectGenerator/tools/projectGenerator/src/: ProjectGenerator.cpp  ProjectGenerator.h  main.cpp  tcApp.cpp  tcApp.h
tools/src/: main.cpp
trussc/: CMakeLists.txt
trussc/cmake/: trussc_app.cmake
trussc/include/: TrussC.h  tcMath.h  tcPlatform.h
trussc/include/sokol/: TRUSSC_MODIFICATIONS.md  sokol_app.h
trussc/include/tc/animation/: tcEasing.h  tcTween.h
trussc/include/tc/app/: tcGlobal.cpp
trussc/include/tc/events/: tcCoreEvents.h  tcEventArgs.h
trussc/include/tc/gpu/: tcFbo.h  tcTexture.h
trussc/include/tc/graphics/: tcMesh.h  tcRenderContext.h  tcShape.h
trussc/include/tc/math/: tcFFT.h
trussc/include/tc/sound/: tcSound.h
trussc/include/tc/utils/: tcUtils.h
trussc/platform/android/: sokol_impl.cpp  tcPlatform_android.cpp
trussc/platform/ios/: imgui_impl.mm  sokol_impl.mm  tcFbo_ios.mm  tcFileDialog_ios.mm  tcPlatform_ios.mm  tcSound_ios.mm  tcVideoGrabber_ios.mm  tcVideoPlayer_ios.mm
trussc/platform/linux/: sokol_impl.cpp  tcFbo_linux.cpp  tcPlatform_linux.cpp  tcVideoPlayer_linux.cpp
trussc/platform/mac/: sokol_impl.mm  tcFbo_mac.mm  tcPlatform_mac.mm
trussc/platform/web/: sokol_impl.cpp  tcFbo_web.cpp  tcPlatform_web.cpp
trussc/platform/win/: tcFbo_win.cpp  tcPlatform_win.cpp
trussc/resources/: Info-iOS.plist.in  Info.plist.in
